--- a/templates/guestbook/index.html
+++ b/templates/guestbook/index.html
@@ -1,20 +1,22 @@
 {% extends '../base.html' %}
 
+{% load mathfilters %}
+
 {% block css_link %}
 <link href="/assets/css/guestbook.css" rel="stylesheet" type="text/css">
 {% endblock %}
 
 {% block content %}
 			<div id="guestbook">
-				<form action="/guestbook" method="post">
-					<input type="hidden" name="a" value="insert">
+				<form action="/guestbook/add" method="post">
+					{% csrf_token %}
 					<table>
 						<tr>
 							<td>이름</td><td><input type="text" name="name"></td>
-							<td>비밀번호</td><td><input type="password" name="pass"></td>
+							<td>비밀번호</td><td><input type="password" name="password"></td>
 						</tr>
 						<tr>
-							<td colspan=4><textarea name="content" id="content"></textarea></td>
+							<td colspan=4><textarea id="content" name="message"></textarea></td>
 						</tr>
 						<tr>
 							<td colspan=4 align=right><input type="submit" VALUE=" 확인 "></td>
@@ -22,25 +24,21 @@
 					</table>
 				</form>
 				<ul>
-					<li>
-						<table>
-							<tr>
-								<td>[4]</td>
-								<td>안대혁</td>
-								<td>2015-11-10 11:22:30</td>
-								<td><a href="">삭제</a></td>
-							</tr>
-							<tr>
-								<td colspan=4>
-								안녕하세요. ^^;<br>
-								하하하하	
-								</td>
-							</tr>
-						</table>
-						<br>
-					</li>
+					{% for guestbook in guestbooklist %}
+						<li>
+							<table width=510 border=1>
+								<tr>
+									<td>{{ guestbooklist | length | sub:forloop.counter | add:1 }} </td>
+									<td>{{ guestbook.name }}</td>
+									<td>{{ guestbook.reg_date }}</td>
+									<td><a href="/guestbook/deleteform?no={{ guestbook.no }}">삭제</a></td>
+								</tr>
+								<tr>
+									<td colspan=4>{{ guestbook.message | linebreaksbr }}</td>
+								</tr>
+							</table>
+						</li>
+					{% endfor %}
 				</ul>
 			</div>
 {% endblock %}
-
-
